--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@slack/client": "^3.10.0",
     "async": "2.1.2",
+    "basic-auth": "^2.0.0",
     "binance": "^1.0.2",
     "bitcoin-co-id": "0.0.1",
     "bitexthai": "^0.1.0",
